# api/test.py
@@ -1,4 +1,0 @@
-import engine
-
-print(engine.generate([engine.Texture('monotone')]))
-
