# test.py
@@ -1,0 +1,7 @@
+import engine.engine as engine
+from engine.filters.highest_card import HighestCard
+
+print(HighestCard('6').options)
+
+print(engine.generate([engine.Texture('monotone')]))
+
